--- a/trabalho-final.ipynb
+++ b/trabalho-final.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,13 +113,13 @@
     "from pyspark.sql.types import FloatType\n",
     "\n",
     "def calcular_incidencia(casos, populacao, por_habitantes):\n",
-    "    return (casos * por_habitantes) / populacao\n",
+    "    return format_number((casos * por_habitantes) / populacao, 2)\n",
     "\n",
     "def calcular_mortalidade(obitos, populacao, por_habitantes):\n",
-    "    return (obitos * por_habitantes) / populacao\n",
+    "    return format_number((obitos * por_habitantes) / populacao, 2)\n",
     "\n",
     "def calcular_letalidade(obitos, casos):\n",
-    "    return (obitos * 100) / casos\n",
+    "    return format_number((obitos * 100) / casos, 2)\n",
     "\n",
     "spark.sparkContext.setLogLevel(\"INFO\")\n",
     "spark.catalog.setCurrentDatabase(dbName=\"trabalhofinal\")"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -168,9 +168,8 @@
    ],
    "source": [
     "vizualizacao_1 = painel_covid.select(\"recuperadosnovos\",\"emacompanhamentonovos\")\\\n",
-    "            .agg({\"recuperadosnovos\": \"max\", \"emacompanhamentonovos\": \"max\"})\\\n",
-    "            .withColumnRenamed(\"max(recuperadosnovos)\",\"recuperadosnovos\")\\\n",
-    "            .withColumnRenamed(\"max(emacompanhamentonovos)\",\"emacompanhamentonovos\")\n",
+    "            .agg(max(\"recuperadosnovos\").alias(\"recuperadosnovos\"),\\\n",
+    "                 max(\"emacompanhamentonovos\").alias(\"emacompanhamentonovos\"))\n",
     "vizualizacao_1.show()"
    ]
   },
@@ -183,29 +182,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------+--------------+----------+-----------------+\n",
-      "|populacaoTCU2019|casosacumulado|casosnovos|      incidencia*|\n",
-      "+----------------+--------------+----------+-----------------+\n",
-      "|       210147125|      18855015|    115228|89722.93068467462|\n",
-      "+----------------+--------------+----------+-----------------+\n",
+      "+--------------+----------+----------------+-----------+\n",
+      "|casosacumulado|casosnovos|populacaoTCU2019|incidencia*|\n",
+      "+--------------+----------+----------------+-----------+\n",
+      "|      18855015|    115228|       210147125|  89,722.93|\n",
+      "+--------------+----------+----------------+-----------+\n",
       "\n"
      ]
     }
    ],
    "source": [
     "vizualizacao_2 = painel_covid.select(\"casosacumulado\",\"casosnovos\",\"populacaoTCU2019\")\\\n",
-    "            .agg({\"casosacumulado\":\"max\",\"casosnovos\":\"max\",\"populacaoTCU2019\":\"max\"})\\\n",
-    "            .withColumnRenamed(\"max(casosacumulado)\",\"casosacumulado\")\\\n",
-    "            .withColumnRenamed(\"max(casosnovos)\",\"casosnovos\")\\\n",
-    "            .withColumnRenamed(\"max(populacaoTCU2019)\",\"populacaoTCU2019\")\\\n",
-    "            .withColumn(\"incidencia*\", calcular_incidencia(col(\"casosacumulado\").cast(FloatType()), col(\"populacaoTCU2019\").cast(FloatType()),1000000))\n",
+    "            .agg(max(\"casosacumulado\").alias(\"casosacumulado\"),\\\n",
+    "                 max(\"casosnovos\").alias(\"casosnovos\"),\\\n",
+    "                 max(\"populacaoTCU2019\").alias(\"populacaoTCU2019\"))\\\n",
+    "            .withColumn(\"incidencia*\",\n",
+    "                        calcular_incidencia(col(\"casosacumulado\").cast(FloatType()),\n",
+    "                                            col(\"populacaoTCU2019\").cast(FloatType()),\n",
+    "                                            1000000))\n",
     "vizualizacao_2.show()"
    ]
   },
@@ -218,31 +219,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------+-----------+---------------+--------------+-----------------+------------------+\n",
-      "|populacaoTCU2019|obitosnovos|obitosacumulado|casosacumulado|       letalidade|       mortalidade|\n",
-      "+----------------+-----------+---------------+--------------+-----------------+------------------+\n",
-      "|       210147125|       4249|         526892|      18855015|2.794439421318974|2507.2530493113586|\n",
-      "+----------------+-----------+---------------+--------------+-----------------+------------------+\n",
+      "+--------------+---------------+-----------+----------------+----------+-----------+\n",
+      "|casosacumulado|obitosacumulado|obitosnovos|populacaoTCU2019|letalidade|mortalidade|\n",
+      "+--------------+---------------+-----------+----------------+----------+-----------+\n",
+      "|      18855015|         526892|       4249|       210147125|      2.79|   2,507.25|\n",
+      "+--------------+---------------+-----------+----------------+----------+-----------+\n",
       "\n"
      ]
     }
    ],
    "source": [
     "vizualizacao_3 = painel_covid.select(\"casosacumulado\",\"obitosacumulado\",\"obitosnovos\",\"populacaoTCU2019\")\\\n",
-    "            .agg({\"casosacumulado\":\"max\",\"obitosacumulado\":\"max\",\"obitosnovos\":\"max\",\"populacaoTCU2019\":\"max\"})\\\n",
-    "            .withColumnRenamed(\"max(casosacumulado)\",\"casosacumulado\")\\\n",
-    "            .withColumnRenamed(\"max(obitosacumulado)\",\"obitosacumulado\")\\\n",
-    "            .withColumnRenamed(\"max(obitosnovos)\",\"obitosnovos\")\\\n",
-    "            .withColumnRenamed(\"max(populacaoTCU2019)\",\"populacaoTCU2019\")\\\n",
-    "            .withColumn(\"letalidade\", calcular_letalidade(col(\"obitosacumulado\").cast(FloatType()), col(\"casosacumulado\").cast(FloatType())))\\\n",
-    "            .withColumn(\"mortalidade\", calcular_mortalidade(col(\"obitosacumulado\").cast(FloatType()), col(\"populacaoTCU2019\").cast(FloatType()),1000000))\n",
+    "            .agg(max(\"casosacumulado\").alias(\"casosacumulado\"),\n",
+    "                 max(\"obitosacumulado\").alias(\"obitosacumulado\"),\n",
+    "                 max(\"obitosnovos\").alias(\"obitosnovos\"),\n",
+    "                 max(\"populacaoTCU2019\").alias(\"populacaoTCU2019\"))\\\n",
+    "            .withColumn(\"letalidade\", \n",
+    "                        calcular_letalidade(col(\"obitosacumulado\").cast(FloatType()),\n",
+    "                                            col(\"casosacumulado\").cast(FloatType())))\\\n",
+    "            .withColumn(\"mortalidade\", \n",
+    "                        calcular_mortalidade(col(\"obitosacumulado\").cast(FloatType()),\n",
+    "                                             col(\"populacaoTCU2019\").cast(FloatType()),1000000))\n",
     "vizualizacao_3.show()"
    ]
   },
@@ -311,39 +315,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------+----------------+---------------+--------------+------------------+------------------+\n",
-      "|      regiao|populacaoTCU2019|obitosacumulado|casosacumulado|  incidencia100mil| mortalidade100mil|\n",
-      "+------------+----------------+---------------+--------------+------------------+------------------+\n",
-      "|    Nordeste|         2872347|         115502|       4426773|154116.92847417112|4021.1714698815986|\n",
-      "|         Sul|         1933105|          85038|       3780833|195583.43267230698|4399.0366834703755|\n",
-      "|     Sudeste|        12252023|         244856|       7129027|58186.530106252656|1998.4943900284875|\n",
-      "|Centro-Oeste|         3015268|          49490|       1916634|63564.302444757814|1641.3135389623742|\n",
-      "|      Brasil|       210147125|         526892|      18855015| 8972.293567439801|250.72529713469308|\n",
-      "|       Norte|         2182763|          43929|       1730152| 79264.31034427467|2012.5410298781865|\n",
-      "+------------+----------------+---------------+--------------+------------------+------------------+\n",
+      "+------------+--------------+---------------+----------------+----------------+-----------------+\n",
+      "|      regiao|casosacumulado|obitosacumulado|populacaoTCU2019|incidencia100mil|mortalidade100mil|\n",
+      "+------------+--------------+---------------+----------------+----------------+-----------------+\n",
+      "|    Nordeste|       4426773|         115502|         2872347|      154,116.93|         4,021.17|\n",
+      "|         Sul|       3780833|          85038|         1933105|      195,583.43|         4,399.04|\n",
+      "|     Sudeste|       7129027|         244856|        12252023|       58,186.53|         1,998.49|\n",
+      "|Centro-Oeste|       1916634|          49490|         3015268|       63,564.30|         1,641.31|\n",
+      "|      Brasil|      18855015|         526892|       210147125|        8,972.29|           250.73|\n",
+      "|       Norte|       1730152|          43929|         2182763|       79,264.31|         2,012.54|\n",
+      "+------------+--------------+---------------+----------------+----------------+-----------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
     "vizualizacao_regioes = painel_covid.where((col(\"municipio\")!=\"\") | (col(\"regiao\")==\"Brasil\"))\\\n",
-    "            .groupBy(\"regiao\",\"municipio\").agg({\"casosacumulado\":\"max\",\"obitosacumulado\":\"max\",\"populacaoTCU2019\":\"max\"})\\\n",
-    "            .withColumnRenamed(\"max(casosacumulado)\",\"casosacumulado\")\\\n",
-    "            .withColumnRenamed(\"max(obitosacumulado)\",\"obitosacumulado\")\\\n",
-    "            .withColumnRenamed(\"max(populacaoTCU2019)\",\"populacaoTCU2019\")\\\n",
-    "            .groupBy(\"regiao\").agg({\"casosacumulado\":\"sum\",\"obitosacumulado\":\"sum\",\"populacaoTCU2019\":\"max\"})\\\n",
-    "            .withColumnRenamed(\"sum(casosacumulado)\",\"casosacumulado\")\\\n",
-    "            .withColumnRenamed(\"sum(obitosacumulado)\",\"obitosacumulado\")\\\n",
-    "            .withColumnRenamed(\"max(populacaoTCU2019)\",\"populacaoTCU2019\")\\\n",
-    "            .withColumn(\"incidencia100mil\", calcular_incidencia100mil(col(\"casosacumulado\").cast(FloatType()), col(\"populacaoTCU2019\").cast(FloatType()),100000))\\\n",
-    "            .withColumn(\"mortalidade100mil\", calcular_mortalidade100mil(col(\"obitosacumulado\").cast(FloatType()), col(\"populacaoTCU2019\").cast(FloatType()),100000))\n",
+    "            .groupBy(\"regiao\",\"municipio\")\\\n",
+    "            .agg(max(\"casosacumulado\").alias(\"casosacumulado\"),\n",
+    "                 max(\"obitosacumulado\").alias(\"obitosacumulado\"),\n",
+    "                 max(\"populacaoTCU2019\").alias(\"populacaoTCU2019\"))\\\n",
+    "            .groupBy(\"regiao\")\\\n",
+    "            .agg(sum(\"casosacumulado\").alias(\"casosacumulado\"),\n",
+    "                 sum(\"obitosacumulado\").alias(\"obitosacumulado\"),\n",
+    "                 max(\"populacaoTCU2019\").alias(\"populacaoTCU2019\"))\\\n",
+    "            .withColumn(\"incidencia100mil\",\n",
+    "                        calcular_incidencia(col(\"casosacumulado\").cast(FloatType()),\n",
+    "                                            col(\"populacaoTCU2019\").cast(FloatType()),\n",
+    "                                            100000))\\\n",
+    "            .withColumn(\"mortalidade100mil\",\n",
+    "                        calcular_mortalidade(col(\"obitosacumulado\").cast(FloatType()),\n",
+    "                                             col(\"populacaoTCU2019\").cast(FloatType()),\n",
+    "                                             100000))\n",
     "vizualizacao_regioes.show()"
    ]
   },
